--- a/Kiznic/res/layout/list_item_card_item_card.xml
+++ b/Kiznic/res/layout/list_item_card_item_card.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical" >
     
     <LinearLayout
+       	android:id="@+id/recommend_recommendview_view"
 	        android:layout_width="match_parent"
 	        android:layout_height="85dip"
 	        android:background="#FDF9F2"
