--- a/Kiznic/res/layout/activity_mypage.xml
+++ b/Kiznic/res/layout/activity_mypage.xml
@@ -42,9 +42,8 @@
                 android:id="@+id/mypage_idinput_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="10dip"
                 android:layout_centerInParent="true"
-                android:src="@drawable/mypage_next"/>
+                android:src="@drawable/mypage_login"/>
             
         </RelativeLayout>
         
@@ -109,7 +108,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dip"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:background="#DEE7E7">
             
             <LinearLayout
                 android:layout_width="0dip"
@@ -133,10 +133,10 @@
                 android:layout_weight="1">
                 
                 <ImageView
-                    android:layout_width="20dip"
-                    android:layout_height="20dip"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_centerInParent="true"
-                    android:src="@drawable/rainfall"/>
+                    android:src="@drawable/mypage_add"/>
                 
             </RelativeLayout>
             
@@ -157,14 +157,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_centerInParent="true"
-                    android:src="@drawable/kid"/>
+                    android:padding="5dip"
+                    android:src="@drawable/mypage_profile"/>
                 
                 <ImageView
                     android:layout_width="20dip"
                     android:layout_height="20dip"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
-                    android:src="@drawable/rainfall"/>
+                    android:src="@drawable/mypage_camera"/>
                     
                 
             </RelativeLayout>
@@ -243,10 +244,11 @@
                         android:layout_weight="4">
                         
                         <ImageView
-                            android:layout_width="40dip"
-                            android:layout_height="40dip"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
                             android:layout_centerInParent="true"
-                            android:src="@drawable/rainfall"/>
+                            android:padding="5dip"
+                            android:src="@drawable/mypage_wearning"/>
                         
                     </RelativeLayout>
                     
@@ -273,36 +275,114 @@
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/rainfall" />
-
-		</LinearLayout> 
-		
-		<LinearLayout
-            android:layout_width="0dip"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:orientation="vertical"
+            >
             
-		    <ImageView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/rainfall" />
-		    
+                android:layout_height="0dip"
+                android:layout_weight="5"
+                android:gravity="center">
+                
+	            <ImageView
+	                android:layout_width="match_parent"
+	                android:layout_height="match_parent"
+	                android:layout_gravity="center_vertical"
+	                android:src="@drawable/mypage_push" />
+                
+            </LinearLayout>
+            
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:layout_weight="2"
+                android:gravity="center">
+                
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="Push"
+                    android:textColor="#000000"
+                    android:textSize="12sp"/>
+                
+            </LinearLayout>
+
 		</LinearLayout> 
 		
 		<LinearLayout
             android:layout_width="0dip"
             android:layout_height="match_parent"
-            android:layout_weight="1">
-	
-		    <ImageView
+            android:layout_weight="1"
+            android:orientation="vertical">
+            
+		    <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/rainfall" />
+                android:layout_height="0dip"
+                android:layout_weight="5"
+                android:gravity="center">
+                
+	            <ImageView
+	                android:layout_width="match_parent"
+	                android:layout_height="match_parent"
+	                android:layout_gravity="center_vertical"
+	                android:src="@drawable/mypage_setting" />
+                
+            </LinearLayout>
+            
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:layout_weight="2"
+                android:gravity="center">
+                
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="Set up"
+                    android:textColor="#000000"
+                    android:textSize="12sp"/>
+                
+            </LinearLayout>
+            
+		</LinearLayout> 
+		
+		<LinearLayout
+            android:layout_width="0dip"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
+	
+		    <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:layout_weight="5"
+                android:gravity="center">
+                
+	            <ImageView
+	                android:layout_width="match_parent"
+	                android:layout_height="match_parent"
+	                android:layout_gravity="center_vertical"
+	                android:src="@drawable/mypage_smartgear" />
+                
+            </LinearLayout>
+            
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:layout_weight="2"
+                android:gravity="center">
+                
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="Smart watch"
+                    android:textColor="#000000"
+                    android:textSize="12sp"/>
+                
+            </LinearLayout>
 		    		
 		</LinearLayout>        
         
