--- a/Kiznic/res/layout/list_item_weather_card.xml
+++ b/Kiznic/res/layout/list_item_weather_card.xml
@@ -240,32 +240,54 @@
 		                 
 		             </LinearLayout>
 
-		             <RelativeLayout
+		             <LinearLayout
 		             	 android:layout_width="0dip"
 		              	 android:layout_height="match_parent"
 		             	 android:layout_weight="17"
 		                 android:orientation="vertical" >
 		                 
-		                 <ImageView
-		                     android:id="@+id/weather_finedustimage_image"
-		                     android:layout_width="40dip"
-		                     android:layout_height="40dip"
-		                     android:layout_centerHorizontal="true"
-		                     android:layout_marginTop="5dip"
-		                     android:src="@drawable/finedust"/>
+		                 <RelativeLayout
+		                     android:layout_width="match_parent"
+		                     android:layout_height="0dip"
+		                     android:layout_weight="3">
+				     	     
+			                 <ImageView
+			                     android:id="@+id/weather_finedustimage_image"
+			                     android:layout_width="40dip"
+			                     android:layout_height="40dip"
+								 android:layout_centerInParent="true"
+			                     android:src="@drawable/finedust"/>
+		                     
+			                 <TextView
+			                     android:layout_width="wrap_content"
+			                     android:layout_height="wrap_content"
+			                     android:layout_centerInParent="true"
+			                     android:text="보통"
+			                     android:textColor="#000000"
+			                     android:textSize="12sp"/>
+			                 
+		                 </RelativeLayout>
 		                 
-		                 <TextView
-		                     android:id="@+id/weather_finedusttext_text"
-		                     android:layout_width="wrap_content"
-		                     android:layout_height="wrap_content"
-		                     android:layout_marginTop="5dip"
-							 android:layout_centerHorizontal="true"
-							 android:layout_below="@id/weather_finedustimage_image"
-		                     android:text="미세먼지 농도 50"
-		                     android:textColor="#FFFFFF"
-		                     android:textSize="10sp"/>
+		                 <RelativeLayout
+		                     android:layout_width="match_parent"
+		                     android:layout_height="0dip"
+		                     android:layout_weight="2">
+
+		                     <TextView
+			                     android:id="@+id/weather_finedusttext_text"
+			                     android:layout_width="wrap_content"
+			                     android:layout_height="wrap_content"
+			                     android:layout_marginTop="5dip"
+								 android:layout_centerInParent="true"
+			                     android:text="미세먼지 농도 50"
+			                     android:textColor="#FFFFFF"
+			                     android:textSize="10sp"/>
+		                     
+		                 </RelativeLayout>
 		                 
-		             </RelativeLayout>
+		                 
+		                 
+		             </LinearLayout>
 		             
 		         </LinearLayout>
 		         
@@ -316,31 +338,52 @@
 		             
 		         </LinearLayout>
 		         
-		         <RelativeLayout
-		             android:layout_width="match_parent"
-		             android:layout_height="0dip"
-		             android:layout_weight="93">
-		             
-		             <ImageView
-		                 android:id="@+id/weather_nextfinedustimage_image"
-		                 android:layout_width="40dip"
-		                 android:layout_height="40dip"
-		                 android:layout_centerHorizontal="true"
-		                 android:layout_marginTop="13dip"
-		                 android:src="@drawable/finedust"/>
+		         <LinearLayout
+		             	 android:layout_width="match_parent"
+			             android:layout_height="0dip"
+			             android:layout_weight="93"
+		                 android:orientation="vertical" >
 		                 
-		             <TextView
-		                 android:id="@+id/weather_nextfinedusttext_text"
-		                 android:layout_width="wrap_content"
-		                 android:layout_height="wrap_content"
-		                 android:layout_marginTop="5dip"
-						 android:layout_centerHorizontal="true"
-						 android:layout_below="@id/weather_nextfinedustimage_image"
-		                 android:text="미세먼지 농도 50"
-		                 android:textColor="#FFFFFF"
-		                 android:textSize="10sp"/>
-		             
-		         </RelativeLayout>
+		                 <RelativeLayout
+		                     android:layout_width="match_parent"
+		                     android:layout_height="0dip"
+		                     android:layout_weight="3">
+				     	     
+			                 <ImageView
+			                     android:id="@+id/weather_nextfinedustimage_image"
+			                     android:layout_width="40dip"
+			                     android:layout_height="40dip"
+								 android:layout_centerInParent="true"
+			                     android:src="@drawable/finedust"/>
+		                     
+			                 <TextView
+			                     android:layout_width="wrap_content"
+			                     android:layout_height="wrap_content"
+			                     android:layout_centerInParent="true"
+			                     android:text="보통"
+			                     android:textColor="#000000"
+			                     android:textSize="12sp"/>
+			                 
+		                 </RelativeLayout>
+		                 
+		                 <RelativeLayout
+		                     android:layout_width="match_parent"
+		                     android:layout_height="0dip"
+		                     android:layout_weight="2">
+
+		                     <TextView
+			                     android:id="@+id/weather_nextfinedusttext_text"
+			                     android:layout_width="wrap_content"
+			                     android:layout_height="wrap_content"
+			                     android:layout_marginTop="5dip"
+								 android:layout_centerInParent="true"
+			                     android:text="미세먼지 농도 50"
+			                     android:textColor="#FFFFFF"
+			                     android:textSize="10sp"/>
+		                     
+		                 </RelativeLayout>
+		                 
+		             </LinearLayout>
 		         
 		     </LinearLayout>
 		     
