--- a/Kiznic/res/layout/activity_detailpage.xml
+++ b/Kiznic/res/layout/activity_detailpage.xml
@@ -203,15 +203,17 @@
 			        android:background="#FDF9F2">
 			    
 			        <LinearLayout
+			            android:id="@+id/mapViewContainer"
 			            android:layout_width="match_parent"
 			            android:layout_height="0dip"
-			            android:layout_weight="10">
-			            
-			            <ImageView
-			                android:layout_width="match_parent"
-			                android:layout_height="match_parent"
-			                android:src="@drawable/recommend"/>
-			            
+			            android:layout_weight="10"
+			            android:orientation="vertical">
+			            <!-- 
+			            <com.nhn.android.maps.NMapView 
+						    android:layout_width="match_parent" 
+						    android:layout_height="match_parent" 
+						    android:id="@+id/mapView"/>
+			             -->
 			        </LinearLayout>
 			        
 			        <LinearLayout
