--- a/Kiznic/res/layout/kiznic_title_bar.xml
+++ b/Kiznic/res/layout/kiznic_title_bar.xml
@@ -18,7 +18,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 		android:layout_gravity="center_vertical"
-		android:layout_marginTop="5dip"
         android:background="@drawable/title_home_button"
         />
         
@@ -30,6 +29,14 @@
         android:layout_width="0dip"
         android:layout_height="match_parent"
         android:layout_weight="1">
+        
+        <Button
+        android:id="@+id/title_album_button"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+		android:layout_gravity="center_vertical"
+        android:background="@drawable/title_album_button"
+        />
         
     </LinearLayout>
     
@@ -45,7 +52,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 		android:layout_gravity="center_vertical"
-		android:layout_marginTop="5dip"
         android:background="@drawable/title_search_button"
         />
         
@@ -57,6 +63,14 @@
         android:layout_width="0dip"
         android:layout_height="match_parent"
         android:layout_weight="1">
+        
+        <Button
+        android:id="@+id/title_bookmark_button"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+		android:layout_gravity="center_vertical"
+        android:background="@drawable/title_bookmark_button"
+        />
         
     </LinearLayout>
     
@@ -72,7 +86,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 		android:layout_gravity="center_vertical"
-		android:layout_marginTop="5dip"
         android:background="@drawable/title_mypage_button"
         />
         
