--- a/Kiznic/res/values/styles.xml
+++ b/Kiznic/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
     <style name="CustomTitleBackground">
         <item name="android:background"> #323331 </item>
     </style>
@@ -7,4 +7,21 @@
         <item name="android:windowTitleSize"> 50dip </item>
         <item name="android:windowTitleBackgroundStyle"> @style/CustomTitleBackground </item>
     </style>
+    
+	<style name="ThemeHoloWithActionBar" parent="@android:style/Theme.Holo">
+	    <item name="android:actionBarTabStyle">@style/ActionBarTabStyle</item>
+	    <item name="android:scrollHorizontally">false</item>
+	    <item name="android:paddingLeft">0dp</item>
+	    <item name="android:paddingRight">0dp</item>
+	    <item name="android:actionBarSize">50dp</item>
+	    <item name="android:divider">#6ABED2</item>
+	     <item name="android:actionBarDivider">@null</item>
+	    
+	</style>
+	
+	<style name="ActionBarTabStyle" parent="@android:style/Widget.Holo.ActionBar.TabView">
+	    <item name="android:background">#6ABED2</item>
+	    <item name="android:divider">#6ABED2</item>
+	    <item name="android:showDividers">none</item>
+	</style>
 </resources>
