--- a/Kiznic/res/layout/activity_detailpage.xml
+++ b/Kiznic/res/layout/activity_detailpage.xml
@@ -11,7 +11,8 @@
 	     <ScrollView
 	         android:layout_width="match_parent"
 	         android:layout_height="wrap_content"
-	         android:orientation="vertical">
+	         android:orientation="vertical"
+	         android:scrollbars="none">
 	     	<LinearLayout
 	     	    android:layout_width="match_parent"
 	     	    android:layout_height="wrap_content"
@@ -126,7 +127,8 @@
 						android:footerDividersEnabled="true"
 						android:listSelector="@android:color/transparent"
 						android:cacheColorHint="@android:color/transparent"
-						android:divider="@null" />
+						android:divider="@null" 
+						android:scrollbars="none"/>
 			        
 			    </LinearLayout>
 			    
@@ -301,7 +303,8 @@
 							android:footerDividersEnabled="true"
 							android:listSelector="@android:color/transparent"
 							android:cacheColorHint="@android:color/transparent"
-							android:divider="@null" />
+							android:divider="@null" 
+							android:scrollbars="none"/>
 			            
 			        </LinearLayout>
 			        
