--- a/Kiznic/res/layout/activity_main.xml
+++ b/Kiznic/res/layout/activity_main.xml
@@ -150,5 +150,6 @@
 		android:footerDividersEnabled="true"
 		android:listSelector="@android:color/transparent"
 		android:cacheColorHint="@android:color/transparent"
-		android:divider="@null" />
+		android:divider="@null"
+		android:scrollbars="none" />
 </LinearLayout>
