--- a/Kiznic/res/layout/activity_search.xml
+++ b/Kiznic/res/layout/activity_search.xml
@@ -157,7 +157,8 @@
 			android:listSelector="@android:color/transparent"
 			android:cacheColorHint="@android:color/transparent"
 			android:divider="@null"
-			android:dividerHeight="10dp" />
+			android:dividerHeight="10dp" 
+			android:scrollbars="none"/>
 	
 	</LinearLayout>
 	
